# whatsappbot-sx1cxc

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: analytics-service.yml  api-gateway.yml  contact-service.yml  message-service.yml  template-service.yml  web.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/kubernetes/base/: analytics-service.yaml  api-gateway.yaml  configmap.yaml  contact-service.yaml  ingress.yaml  message-service.yaml  namespace.yaml  secrets.yaml  service-monitor.yaml  template-service.yaml  web.yaml
infrastructure/kubernetes/overlays/dev/: kustomization.yaml
infrastructure/kubernetes/overlays/prod/: kustomization.yaml
infrastructure/kubernetes/overlays/staging/: kustomization.yaml
infrastructure/monitoring/grafana/dashboards/: analytics.json  api.json  messages.json  system.json
infrastructure/monitoring/loki/: loki.yaml
infrastructure/monitoring/otel-collector/: config.yaml
infrastructure/monitoring/prometheus/: prometheus.yaml
infrastructure/monitoring/prometheus/rules/: alerts.yaml  recording.yaml
infrastructure/monitoring/tempo/: tempo.yaml
infrastructure/terraform/aws/: backend.tf  outputs.tf  provider.tf  variables.tf
infrastructure/terraform/aws/ecr/: main.tf
infrastructure/terraform/aws/eks/: main.tf
infrastructure/terraform/aws/rds/: main.tf
infrastructure/terraform/aws/redis/: main.tf
infrastructure/terraform/aws/s3/: main.tf
infrastructure/terraform/aws/vpc/: main.tf
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
src/backend/analytics-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/backend/analytics-service/src/: __init__.py  app.py  config.py
src/backend/analytics-service/src/models/: __init__.py  metrics.py  reports.py
src/backend/analytics-service/src/routes/: __init__.py  dashboard.py  metrics.py  reports.py
src/backend/analytics-service/src/services/: __init__.py  aggregator.py  calculator.py
src/backend/api-gateway/: Dockerfile  package.json  tsconfig.json
src/backend/api-gateway/src/: app.ts
src/backend/contact-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/backend/contact-service/src/: __init__.py  app.py  config.py
src/backend/contact-service/src/models/: __init__.py  contact.py  group.py
src/backend/contact-service/src/routes/: __init__.py  contacts.py  groups.py  import.py
src/backend/contact-service/src/services/: __init__.py  contact_manager.py  group_manager.py  import_manager.py
src/backend/db/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_add_templates.down.sql  000002_add_templates.up.sql  000003_add_analytics.down.sql  000003_add_analytics.up.sql
src/backend/db/schemas/: analytics.sql  contacts.sql  messages.sql  templates.sql
src/backend/message-service/: Dockerfile  Makefile  README.md  go.mod  go.sum
src/backend/template-service/: Dockerfile  package.json  tsconfig.json
src/backend/template-service/src/: app.ts
src/test/: .env.test  README.md  jest.config.ts  package.json  tsconfig.json
src/test/e2e/config/: jest.config.ts  playwright.config.ts
src/test/e2e/fixtures/: contacts.json  messages.json  templates.json
src/test/e2e/specs/: auth.spec.ts  contacts.spec.ts  dashboard.spec.ts  messages.spec.ts  templates.spec.ts
src/test/e2e/utils/: test-helpers.ts
src/test/integration/analytics-service/: metrics.test.ts  reports.test.ts
src/test/integration/utils/: test-queue.ts  (+1 more)
src/test/utils/: test-data-generator.ts  test-db-cleaner.ts  test-logger.ts
src/web/: .dockerignore  .env.development  .env.production  .eslintrc.json  Dockerfile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/web/public/: manifest.json  robots.txt
src/web/src/: App.tsx  index.tsx  vite-env.d.ts
(+185 files in other folders)
